HSEARCH-3949 Remove WildFly support in legacy code